添加拉黑理由，商家添加删除群踢人等socket事件

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,7 +9,7 @@
         require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
       </script>
     <% } %>
-    <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
+    <!-- <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script> -->
   </head>
   <body>
     <div id="app"></div>
